z-index bug fixed

--- a/src/app/products/product-filter/product-filter.component.css
+++ b/src/app/products/product-filter/product-filter.component.css
@@ -1,1 +1,1 @@
-/* .sticky-top{top: 80px;} */
+.sticky-top{top: 80px;z-index: 0;}
